--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -6,52 +6,17 @@ main .hero-container {
   padding: 0;
 }
 
-main .hero .content {
-text-align: center;
-max-width: 1200px;
-position: absolute;
-color: white;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-}
-
-main .hero .content .separator {
-  width: 128px;
-  height: 5px;
-  display: block;
-  content: "";
-  background-color: #ffc719;
-  transition: width .4s ease-in-out;
-  margin: auto;
-}
 main .hero {
-height: 100vh;
-}
-
-.hero {
   position: relative;
   padding: 32px;
   min-height: 300px;
+  color: var(--background-color);
 }
 
-.hero h1 {
+main .hero .hero-body {
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  color: white;
-}
-
-.hero picture {
-  position: absolute;
-  z-index: -1;
-  inset: 0;
-  object-fit: cover;
-  box-sizing: border-box;
-}
-
-.hero img {
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
+  position: relative;
+  z-index: 1;
 }
